feat: add gradient background

--- a/app/views/home/about_mentorship.html.erb
+++ b/app/views/home/about_mentorship.html.erb
@@ -1,4 +1,5 @@
 <div class="relative w-full px-4 sm:px-6 lg:px-8 mt-20">
+  <%= image_tag "bg/gradient_background_2.svg", class: "absolute w-screen h-[1/2rem] transform object-center object-cover fixed" %>
 
   <div class="relative max-w-6xl mx-auto">
 
