feat: add bullet points

--- a/app/views/home/about_mentorship.html.erb
+++ b/app/views/home/about_mentorship.html.erb
@@ -82,12 +82,28 @@
   </div>
   <div class="max-w-6xl mx-auto mb-24 px-4">
     <h3 class="text-2xl font-bold italic mb-6">We're looking for leaders with</h3>
-    <div class="text-lg font-light">
-      <p>At Least Four Years Of Experience In Their Field</p>
-      <p>Preferably A Background In Tech, Design, Or Business</p>
-      <p>The Ability To Meet At Least Once Every Two Weeks</p>
-      <p>The Ability To Attend At Least Six 30-Minute Meetings</p>
-    </div>
+    <ul class="text-lg font-light space-y-1">
+      <li class="flex items-center">
+        <svg class="w-3.5 h-3.5 me-2 text-gray-500 dark:text-gray-400 flex-shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+          <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"/>
+        </svg>
+        At Least Four Years Of Experience In Their Field</li>
+      <li class="flex items-center">
+        <svg class="w-3.5 h-3.5 me-2 text-gray-500 dark:text-gray-400 flex-shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+          <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"/>
+        </svg>
+        Preferably A Background In Tech, Design, Or Business</li>
+      <li class="flex items-center">
+        <svg class="w-3.5 h-3.5 me-2 text-gray-500 dark:text-gray-400 flex-shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+          <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"/>
+        </svg>
+        The Ability To Meet At Least Once Every Two Weeks</li>
+      <li class="flex items-center">
+        <svg class="w-3.5 h-3.5 me-2 text-gray-500 dark:text-gray-400 flex-shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+          <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"/>
+        </svg>
+        The Ability To Attend At Least Six 30-Minute Meetings</li>
+    </ul>
   </div>
   <div class="max-w-6xl mx-auto mb-32 px-4">
     <div class="ml-auto w-1/2">
