update: title size bigger

--- a/app/views/home/about_mentorship.html.erb
+++ b/app/views/home/about_mentorship.html.erb
@@ -18,7 +18,7 @@
     </nav>
 
     <div class="text-center mb-16">
-      <p class="text-2xl font-light">Ready to make a difference? Choose your path!</p>
+      <p class="text-5xl font-bold">Ready to make a difference?</p>
       <p class="text-lg text-gray-600 mt-2">We have two amazing ways for you to get involved with DPI</p>
     </div>
     
