--- a/app/views/program_admins/_form.html.erb
+++ b/app/views/program_admins/_form.html.erb
@@ -2,7 +2,6 @@
   <% if @program_admin.errors.any? %>
     <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3">
       <h2><%= pluralize(@program_admin.errors.count, "error") %> prohibited this program_admin from being saved:</h2>
-
       <ul>
         <% @program_admin.errors.each do |error| %>
           <li><%= error.full_message %></li>
@@ -10,16 +9,21 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="p-5">  
+  <div class="p-5">
+    <div class="mb-4">
+      <%= form.label :first_name, "First Name", class: "block text-sm font-medium text-gray-700 mb-1" %>
+      <%= form.text_field :first_name, class: "w-full border border-gray-300 rounded-lg px-3 py-2 text-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-400 transition ease-in-out" %>
+    </div>
+    <div class="mb-4">
+      <%= form.label :last_name, "Last Name", class: "block text-sm font-medium text-gray-700 mb-1" %>
+      <%= form.text_field :last_name, class: "w-full border border-gray-300 rounded-lg px-3 py-2 text-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-400 transition ease-in-out" %>
+    </div>
     <div>
       <%= form.label :email, class: "block text-sm font-medium text-gray-700 mb-1" %>
       <%= form.text_field :email, class: "w-full border border-gray-300 rounded-lg px-3 py-2 mt-4 text-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-400 transition ease-in-out" %>
-
     </div>
   </div>
-
   <div class="mt-8 flex justify-center">
     <%= form.submit class: "bg-black text-white font-semibold py-2 px-6 rounded-lg hover:bg-gray-900 transition ease-in-out duration-200" %>
-     </div>
+  </div>
 <% end %> 
