update: add survey notification toast to dashboard

--- a/app/views/dashboard/mentee/_mentee_dashboard_af.html.erb
+++ b/app/views/dashboard/mentee/_mentee_dashboard_af.html.erb
@@ -43,5 +43,6 @@
     <div class="md:my-5">
       <%= render 'calendar' %>
     </div>
+    <%= render 'dashboard/mentee/survey_notification' %>
   </div>
 </div>
