--- a/app/views/cohort_members/index.html.erb
+++ b/app/views/cohort_members/index.html.erb
@@ -1,76 +1,91 @@
 <div class="bg-gray-50 mt-5 mb-20">
-  <div class="container mx-auto mt-20 px-4">
-    <div class="mb-5">
-      <!-- Back to Dashboard Button -->
-      <%= link_to dashboard_path(role: "admin"), class: "flex items-center space-x-2 group" do %>
-        <div class="w-8 h-8 bg-black rounded-full flex items-center justify-center">
-          <svg class="w-4 h-4 text-white" fill="none" stroke="white" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path>
-          </svg>
-        </div>
-        <span class="text-black font-semibold group-hover:underline">Back to dashboard</span>
-      <% end %>
-    </div>
-
-    <h1 class="text-2xl font-bold text-black text-left mb-5">Members of <%= @cohort.cohort_name if @cohort %></h1>
-
-    <!-- Table Section -->
-    <div class="overflow-x-auto rounded-lg shadow-lg">
-      <div class="relative overflow-y-auto max-h-96">
-        <table class="min-w-full bg-white border border-gray-300 divide-y divide-gray-200">
-          <thead class="bg-[#202020] sticky top-0">
-            <tr>
-              <th class="py-3 px-6 text-left text-xs font-semibold text-white uppercase tracking-wider">Profile Picture</th>
-              <th class="py-3 px-6 text-left text-xs font-semibold text-white uppercase tracking-wider">Email</th>
-              <th class="py-3 px-6 text-left text-xs font-semibold text-white uppercase tracking-wider">Program</th>
-              <th class="py-3 px-6 text-left text-xs font-semibold text-white uppercase tracking-wider">Cohort</th>
-              <th class="py-3 px-6 text-left text-xs font-semibold text-white uppercase tracking-wider relative">
-                <button id="filter-toggle" data-filter="all" class="flex items-center uppercase">
-                  All Members
-                  <svg class="w-4 h-4 ml-2" fill="none" stroke="white" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
-                  </svg>
-                </button>
-                <div id="filter-options" class="absolute left-0 mt-2 w-32 rounded-md shadow-lg hidden">
-                  <button class="block w-full bg-[#202020] text-left px-4 py-2 uppercase hover:bg-white hover:text-black" data-filter="all">All Members</button>
-                  <button class="block w-full bg-[#202020] text-left px-4 py-2 uppercase hover:bg-white hover:text-black" data-filter="mentor">Mentors</button>
-                  <button class="block w-full bg-[#202020] text-left px-4 py-2 uppercase hover:bg-white hover:text-black" data-filter="mentee">Mentees</button>
-                </div>
-              </th>
-            </tr>
-          </thead>
-          <tbody class="divide-y divide-gray-200" id="members-container">
-            <% (@mentors + @mentees).each do |member| %>
-              <tr id="<%= dom_id(member) %>" class="member-item hover:bg-gray-50" data-role="<%= member.role %>">
-                <td class="py-4 px-6 text-sm">
-                  <div class="w-16 h-16 rounded-full overflow-hidden">
-                    <img src="https://api.dicebear.com/9.x/notionists/svg?seed=Default&radius=50" 
-                         alt="Profile Picture" class="w-full h-full object-cover">
+  <div class="flex justify-center p-8">
+    <%= render partial: "dashboard/admin_sidebar", locals: { sidebar_data: @sidebar_data } %>
+    <div class="container mx-auto mt-20 px-4">
+      <div class="mb-5">
+        <!-- Back to Dashboard Button -->
+        <%= link_to dashboard_path(role: "admin"), class: "flex items-center space-x-2 group" do %>
+          <div class="w-8 h-8 bg-black rounded-full flex items-center justify-center">
+            <svg class="w-4 h-4 text-white" fill="none" stroke="white" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path>
+            </svg>
+          </div>
+          <span class="text-black font-semibold group-hover:underline">Back to dashboard</span>
+        <% end %>
+      </div>
+      <h1 class="text-2xl font-bold text-black text-left mb-5">Members of <%= @cohort.cohort_name if @cohort %></h1>
+      <!-- Table Section -->
+      <div class="overflow-x-auto rounded-lg shadow-lg">
+        <div class="relative overflow-y-auto max-h-96">
+          <table class="min-w-full bg-white border border-gray-300 divide-y divide-gray-200">
+            <thead class="bg-[#202020] sticky top-0">
+              <tr>
+                <th class="py-3 px-6 text-left text-xs font-semibold text-white uppercase tracking-wider">Profile Picture</th>
+                <th class="py-3 px-6 text-left text-xs font-semibold text-white uppercase tracking-wider">Email</th>
+                <th class="py-3 px-6 text-left text-xs font-semibold text-white uppercase tracking-wider">Program</th>
+                <th class="py-3 px-6 text-left text-xs font-semibold text-white uppercase tracking-wider">Cohort</th>
+                <th class="py-3 px-6 text-left text-xs font-semibold text-white uppercase tracking-wider relative">
+                  <button id="filter-toggle" data-filter="all" class="flex items-center uppercase">
+                    All Members
+                    <svg class="w-4 h-4 ml-2" fill="none" stroke="white" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
+                    </svg>
+                  </button>
+                  <div id="filter-options" class="absolute left-0 mt-2 w-32 rounded-md shadow-lg hidden">
+                    <button class="block w-full bg-[#202020] text-left px-4 py-2 uppercase hover:bg-white hover:text-black" data-filter="all">All Members</button>
+                    <button class="block w-full bg-[#202020] text-left px-4 py-2 uppercase hover:bg-white hover:text-black" data-filter="mentor">Mentors</button>
+                    <button class="block w-full bg-[#202020] text-left px-4 py-2 uppercase hover:bg-white hover:text-black" data-filter="mentee">Mentees</button>
                   </div>
-                </td>
-                <td class="py-4 px-6 text-sm text-gray-800"><%= member.email %></td>
-                <td class="py-4 px-6 text-sm text-gray-800">
-                  <%= member.cohort.program.name if member.cohort.program %>
-                </td>
-                <td class="py-4 px-6 text-sm text-gray-800"><%= member.cohort.cohort_name %></td>
-                <td class="py-4 px-6 text-sm text-gray-800">
-                  <%= member.role.capitalize %>
-                </td>
+                </th>
               </tr>
-            <% end %>
-          </tbody>
-        </table>
+            </thead>
+            <tbody class="divide-y divide-gray-200" id="members-container">
+              <% (@mentors + @mentees).each do |member| %>
+                <tr id="<%= dom_id(member) %>" class="member-item hover:bg-gray-50" data-role="<%= member.role %>">
+                  <td class="py-4 px-6 text-sm">
+                    <div class="w-16 h-16 rounded-full overflow-hidden">
+                      <img src="https://api.dicebear.com/9.x/notionists/svg?seed=Default&radius=50" 
+                         alt="Profile Picture" class="w-full h-full object-cover">
+                    </div>
+                  </td>
+                  <td class="py-4 px-6 text-sm text-gray-800"><%= member.email %></td>
+                  <td class="py-4 px-6 text-sm text-gray-800">
+                    <%= member.cohort.program.name if member.cohort.program %>
+                  </td>
+                  <td class="py-4 px-6 text-sm text-gray-800"><%= member.cohort.cohort_name %></td>
+                  <td class="py-4 px-6 text-sm text-gray-800">
+                    <%= member.role.capitalize %>
+                  </td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
   </div>
 </div>
-
 <script>
   document.addEventListener("DOMContentLoaded", () => {
     const toggleButton = document.getElementById("filter-toggle");
     const filterOptions = document.getElementById("filter-options");
     const allMembers = Array.from(document.querySelectorAll(".member-item"));
 
+     const dropdowns = document.querySelectorAll('.dropdown');
+
+    dropdowns.forEach(dropdown => {
+      const toggle = dropdown.querySelector('.dropdown-toggle');
+      const menu = dropdown.querySelector('.dropdown-menu');
+      const chevron = dropdown.querySelector('.chevron');
+
+      toggle.addEventListener('click', function () {
+        menu.classList.toggle('hidden');
+        chevron.classList.toggle('rotate-180');
+      });
+    });
+  
+
+    
     toggleButton.addEventListener("click", () => {
       filterOptions.classList.toggle("hidden");
     });
@@ -86,5 +101,7 @@
         });
       }
     });
+
+
   });
 </script>
