--- a/app/views/cohorts/index.html.erb
+++ b/app/views/cohorts/index.html.erb
@@ -1,66 +1,75 @@
 <div class="bg-gray-50 mt-20">
-  <div class="container mx-auto mt-20 px-4">
-    <div class="mb-5">
-      <h1 class="text-2xl font-bold text-black text-left"><%= @program.name %> - Cohorts</h1>
-      <%= link_to "Back to dashboard", dashboard_path(role: "admin"), class: "text-gray-500 hover:text-black hover:underline" %>
-    </div>
+  <div class="flex justify-center p-8">
+    <!-- Sidebar Section -->
+    <%= render partial: "dashboard/admin_sidebar", locals: { sidebar_data: @sidebar_data } %>
 
-    <div class="overflow-x-auto rounded-lg shadow-lg">
-      <table class="min-w-full bg-white border border-gray-300 divide-y divide-gray-200">
-        <thead class="bg-[#202020]">
-          <tr>
-            <th class="py-3 px-6 text-left text-xs font-semibold text-white uppercase tracking-wider">Start Date</th>
-            <th class="py-3 px-6 text-left text-xs font-semibold text-white uppercase tracking-wider">Cohort Name</th>
-            <th class="py-3 px-6 text-left text-xs font-semibold text-white uppercase tracking-wider">End Date</th>
-            <th class="py-3 px-6 text-left text-xs font-semibold text-white uppercase tracking-wider">Required Meetings</th>
-            <th class="py-3 px-6 text-left text-xs font-semibold text-white uppercase tracking-wider">Description</th>
-            <th class="py-3 px-6 text-left text-xs font-semibold text-white uppercase tracking-wider">Shortlist Status</th>
-            <th class="py-3 px-6 text-left text-xs font-semibold text-white uppercase tracking-wider">Creator</th>
-            <th class="py-3 px-6 text-left text-xs font-semibold text-white uppercase tracking-wider">Contact</th>
-            <th class="py-3 px-6 text-left text-xs font-semibold text-white uppercase tracking-wider">Actions</th>
-          </tr>
-        </thead>
-        <tbody class="divide-y divide-gray-200">
-          <% @cohorts.each_with_index do |cohort, index| %>
-            <tr class="hover:bg-gray-50">
-              <td class="py-4 px-6 text-sm text-gray-800"><%= cohort.start_date.strftime("%B %d, %Y") if cohort.start_date %></td>
-              <td class="py-4 px-6 text-sm text-gray-800"><%= cohort.cohort_name %></td>
-              <td class="py-4 px-6 text-sm text-gray-800"><%= cohort.end_date.strftime("%B %d, %Y") if cohort.end_date %></td>
-              <td class="py-4 px-6 text-sm text-gray-800"><%= cohort.required_meetings || "N/A" %></td>
-              <td class="py-4 px-6 text-sm text-gray-800"><%= cohort.description %></td>
-              <td class="py-4 px-6 text-sm text-gray-800"><%= cohort.shortlist_creation_open? ? "Open" : "Closed" %></td>
-              <td class="py-4 px-6 text-sm text-gray-800"><%= cohort.creator.name %></td>
-              <td class="py-4 px-6 text-sm text-gray-800">
-                <% contact = User.find_by(id: cohort.contact_id) %>
-                <%= contact&.email || "N/A" %>
-              </td>
-              <td class="py-4 px-6 text-sm text-gray-800">
-                <div class="flex flex-col space-y-2">
-                  <%= link_to "View", cohort_members_path(cohort_id: cohort.id), class: "text-center text-blue-600 hover:text-blue-800 font-medium px-3 py-1 bg-blue-50 rounded-md shadow-sm hover:bg-blue-100" %>
-                  <button id="openModalBtn-<%= index %>" 
-                          class="text-yellow-600 hover:text-yellow-800 font-medium px-3 py-1 bg-yellow-50 rounded-md shadow-sm hover:bg-yellow-100"
-                          onclick="openModal('<%= cohort.id %>_edit_modal')">
-                    Edit
-                  </button>
-                  <button id="deleteModalBtn-<%= index %>" 
-                          class="text-red-600 hover:text-red-800 font-medium px-3 py-1 bg-red-50 rounded-md shadow-sm hover:bg-red-100"
-                          onclick="openModal('<%= cohort.id %>_delete_modal')">
-                    Delete
-                  </button>
-                </div>
-              </td>
+    <!-- Main Content Section -->
+    <div class="flex-1">
+      <div class="mb-5">
+        <h1 class="text-2xl font-bold text-black text-left"><%= @program.name %> - Cohorts</h1>
+        <%= link_to "Back to dashboard", dashboard_path(role: "admin"), class: "text-gray-500 hover:text-black hover:underline" %>
+      </div>
+
+      <div class="overflow-x-auto rounded-lg shadow-lg">
+        <table class="min-w-full bg-white border border-gray-300 divide-y divide-gray-200">
+          <!-- Table Header -->
+          <thead class="bg-[#202020]">
+            <tr>
+              <th class="py-3 px-6 text-left text-xs font-semibold text-white uppercase tracking-wider">Start Date</th>
+              <th class="py-3 px-6 text-left text-xs font-semibold text-white uppercase tracking-wider">Cohort Name</th>
+              <th class="py-3 px-6 text-left text-xs font-semibold text-white uppercase tracking-wider">End Date</th>
+              <th class="py-3 px-6 text-left text-xs font-semibold text-white uppercase tracking-wider">Required Meetings</th>
+              <th class="py-3 px-6 text-left text-xs font-semibold text-white uppercase tracking-wider">Description</th>
+              <th class="py-3 px-6 text-left text-xs font-semibold text-white uppercase tracking-wider">Shortlist Status</th>
+              <th class="py-3 px-6 text-left text-xs font-semibold text-white uppercase tracking-wider">Creator</th>
+              <th class="py-3 px-6 text-left text-xs font-semibold text-white uppercase tracking-wider">Contact</th>
+              <th class="py-3 px-6 text-left text-xs font-semibold text-white uppercase tracking-wider">Actions</th>
             </tr>
+          </thead>
 
-            
-            <%= render "cohorts/edit_modal", cohort: cohort %>
+          <!-- Table Body -->
+          <tbody class="divide-y divide-gray-200">
+            <% @cohorts.each_with_index do |cohort, index| %>
+              <tr class="hover:bg-gray-50">
+                <td class="py-4 px-6 text-sm text-gray-800"><%= cohort.start_date.strftime("%B %d, %Y") if cohort.start_date %></td>
+                <td class="py-4 px-6 text-sm text-gray-800"><%= cohort.cohort_name %></td>
+                <td class="py-4 px-6 text-sm text-gray-800"><%= cohort.end_date.strftime("%B %d, %Y") if cohort.end_date %></td>
+                <td class="py-4 px-6 text-sm text-gray-800"><%= cohort.required_meetings || "N/A" %></td>
+                <td class="py-4 px-6 text-sm text-gray-800"><%= cohort.description %></td>
+                <td class="py-4 px-6 text-sm text-gray-800"><%= cohort.shortlist_creation_open? ? "Open" : "Closed" %></td>
+                <td class="py-4 px-6 text-sm text-gray-800"><%= cohort.creator.name %></td>
+                <td class="py-4 px-6 text-sm text-gray-800">
+                  <% contact = User.find_by(id: cohort.contact_id) %>
+                  <%= contact&.email || "N/A" %>
+                </td>
+                <td class="py-4 px-6 text-sm text-gray-800">
+                  <div class="flex flex-col space-y-2">
+                    <%= link_to "View", cohort_members_path(cohort_id: cohort.id), class: "text-center text-blue-600 hover:text-blue-800 font-medium px-3 py-1 bg-blue-50 rounded-md shadow-sm hover:bg-blue-100" %>
+                    <button id="openModalBtn-<%= index %>" 
+                            class="text-yellow-600 hover:text-yellow-800 font-medium px-3 py-1 bg-yellow-50 rounded-md shadow-sm hover:bg-yellow-100"
+                            onclick="openModal('<%= cohort.id %>_edit_modal')">
+                      Edit
+                    </button>
+                    <button id="deleteModalBtn-<%= index %>" 
+                            class="text-red-600 hover:text-red-800 font-medium px-3 py-1 bg-red-50 rounded-md shadow-sm hover:bg-red-100"
+                            onclick="openModal('<%= cohort.id %>_delete_modal')">
+                      Delete
+                    </button>
+                  </div>
+                </td>
+              </tr>
 
-            <%= render "delete_modal", cohort: cohort %>
-          <% end %>
-        </tbody>
-      </table>
+              <%= render "cohorts/edit_modal", cohort: cohort %>
+              <%= render "delete_modal", cohort: cohort %>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
 </div>
+
+
 
 <script>
   function openModal(modalId) {
@@ -76,4 +85,21 @@
       modal.classList.add("hidden");
     }
   }
+
+  document.addEventListener('DOMContentLoaded', function () {
+    const dropdowns = document.querySelectorAll('.dropdown');
+
+    dropdowns.forEach(dropdown => {
+      const toggle = dropdown.querySelector('.dropdown-toggle');
+      const menu = dropdown.querySelector('.dropdown-menu');
+      const chevron = dropdown.querySelector('.chevron');
+
+      toggle.addEventListener('click', function () {
+        menu.classList.toggle('hidden');
+        chevron.classList.toggle('rotate-180');
+      });
+    });
+  });
 </script>
+
+
