Added link to new survey in notification button

--- a/app/views/dashboard/mentee/_survey_notification.html.erb
+++ b/app/views/dashboard/mentee/_survey_notification.html.erb
@@ -13,7 +13,7 @@
       <div class="grid grid-cols-2 gap-2">
         <div>
         <!--TODO: Link Survey Page -->
-          <a href="#" class="inline-flex justify-center w-full px-2 py-1.5 text-xs font-medium text-center text-white bg-[#202020] rounded-lg hover:bg-[#676666]">Take Survey</a>
+          <a href="/surveys/new" class="inline-flex justify-center w-full px-2 py-1.5 text-xs font-medium text-center text-white bg-[#202020] rounded-lg hover:bg-[#676666]">Take Survey</a>
         </div>
         <div>
           <a href="#" class="inline-flex justify-center w-full px-2 py-1.5 text-xs font-medium text-center text-gray-900 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-gray-200">Not now</a>
