--- a/app/views/surveys/new.html.erb
+++ b/app/views/surveys/new.html.erb
@@ -1,3 +1,3 @@
-<h1>New Survey</h1>
-
-<%= render 'form', survey: @survey %>
+<div class="flex flex-col px-24 py-10 gap-[1.3rem]">
+  <%= render 'form', survey: @survey %>
+</div>
