--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -1,34 +1,76 @@
-<%= form_with(model: @survey, local: true) do |form| %>
-  <% if @survey.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@survey.errors.count, "error") %> prohibited this survey from being saved:</h2>
-      <ul>
-        <% @survey.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+<div class="flex justify-center">
+  <div class="bg-white rounded-xl shadow-md sm:w-1/2 min-w-[25rem] w-[90%] p-4">
+    <%= form_with(model: @survey, local: true) do |form| %>
+      <% if @survey.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@survey.errors.count, "error") %> prohibited this survey from being saved:</h2>
+          <ul>
+            <% @survey.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
 
-  <div class="hidden field">
-    <%= form.label :match_id %>
-    <%= form.number_field :match_id, :value => current_user.match_id %>
-  </div>
+      <div class="p-4 md:p-5">
+        <div class="grid gap-[2.5rem] mb-4">
+          <div class="grid gap-1 text-center">
+            <h3 class="text-lg font-semibold text-[#202020]">
+              Mentorship Feedback Survey
+            </h3>
+            <p class="text-sm">
+              We’d love to hear your thoughts about your mentorship experience.
+            </p>
+          </div>
 
-  <div class="field">
-    <%= form.label :responsive %>
-    <%= form.number_field :responsive %>
-  </div>
+          <div class="hidden field">
+            <%= form.label :match_id %>
+            <%= form.number_field :match_id, :value => current_user.match_id %>
+          </div>
 
-  <div class="field">
-    <%= form.label :rating %>
-    <%= form.number_field :rating %>
-  </div>
+          <!-- responsive -->
+          <div>
+            <%= form.label :responsive, "Did your mentor respond to you in a timely and helpful manner?", class: "block mb-2 text-s font-medium text-[#202020] dark:text-white" %>
+            <div class="relative mb-10">
+              <label for="labels-range-input" class="sr-only">Labels range</label>
+              <input id="labels-range-input" type="range" value="3" min="1" max="5" step="1" class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer"
+                     oninput="updateResponsiveField(this.value)">
+              <span class="text-sm text-gray-500 dark:text-gray-400 absolute left-0 -translate-x-0 -bottom-6">Very Bad</span>
+              <span class="text-sm text-gray-500 dark:text-gray-400 absolute left-[25%] -translate-x-1/2 -bottom-6">Bad</span>
+              <span class="text-sm text-gray-500 dark:text-gray-400 absolute left-[50%] -translate-x-1/2 -bottom-6">Neutral</span>
+              <span class="text-sm text-gray-500 dark:text-gray-400 absolute left-[75%] -translate-x-1/2 -bottom-6">Good</span>
+              <span class="text-sm text-gray-500 dark:text-gray-400 absolute left-[100%] -translate-x-full -bottom-6">Excellent</span>
+            </div>
 
-  <div class="field">
-    <%= form.label :experience %>
-    <%= form.number_field :experience %>
-  </div>
+            <%= form.hidden_field :responsive, value: 3, id: "responsive-number-field", class: "w-full" %>
+
+            <div class="field hidden" id="responsive-reason-field">
+              <%= form.label :responsive_reason, "Please explain why:", class: "block mb-2 text-s font-medium text-gray-900" %>
+              <%= form.text_area :responsive_reason, class: "block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-[#D9D9D9] focus:ring-[#898989] focus:border-[#898989]" %>
+            </div>
+          </div>
+
+          <!-- experience -->
+          <div>
+            <%= form.label :experience, "How would you rate your mentorship meetings overall?", class: "block mb-2 text-s font-medium text-[#202020] dark:text-white" %>
+            <div class="relative mb-10">
+              <label for="labels-range-input" class="sr-only">Labels range</label>
+              <input id="labels-range-input" type="range" value="3" min="1" max="5" step="1" class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer"
+                     oninput="updateExperienceField(this.value)">
+              <span class="text-sm text-gray-500 dark:text-gray-400 absolute left-0 -translate-x-0 -bottom-6">Very Bad</span>
+              <span class="text-sm text-gray-500 dark:text-gray-400 absolute left-[25%] -translate-x-1/2 -bottom-6">Bad</span>
+              <span class="text-sm text-gray-500 dark:text-gray-400 absolute left-[50%] -translate-x-1/2 -bottom-6">Neutral</span>
+              <span class="text-sm text-gray-500 dark:text-gray-400 absolute left-[75%] -translate-x-1/2 -bottom-6">Good</span>
+              <span class="text-sm text-gray-500 dark:text-gray-400 absolute left-[100%] -translate-x-full -bottom-6">Excellent</span>
+            </div>
+
+            <%= form.hidden_field :experience, value: 3, id: "experience-number-field", class: "w-full" %>
+
+            <div class="field hidden" id="experience-reason-field">
+              <%= form.label :experience_reason, "Please explain why:", class: "block mb-2 text-s font-medium text-gray-900" %>
+              <%= form.text_area :experience_reason, class: "block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-[#D9D9D9] focus:ring-[#898989] focus:border-[#898989]" %>
+            </div>
+          </div>
 
   <div class="field">
     <%= form.label :responsive_reason %>
